--- a/build.gradle
+++ b/build.gradle
@@ -46,7 +46,7 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation "org.springframework.boot:spring-boot-starter-security"
 	implementation group: 'io.jsonwebtoken', name: 'jjwt', version: '0.5.1'
-//	implementation "org.springframework.boot:spring-boot-starter-validation"
+	implementation "org.springframework.boot:spring-boot-starter-validation"
 
 	runtimeOnly 'com.h2database:h2'
 
